internal network => host mode

--- a/compose.yaml
+++ b/compose.yaml
@@ -2,20 +2,20 @@ services:
   hbbs:
     # container_name: hbbs
     # network_mode: host
-    ports:
-      - 21115:21115
-      - 21116:21116
-      - 21116:21116/udp
-      - 21118:21118
+    # ports:
+    #   - 21115:21115
+    #   - 21116:21116
+    #   - 21116:21116/udp
+    #   - 21118:21118
+    # networks:
+    #   - rustdesk-net
     runtime: youki
     image: reg.oncolog.ir/rustdesk-server-pro
-    command: hbbs -r hbbr:21117
+    command: hbbs -r 127.0.0.1:21117
     volumes:
       - type: volume
         source: rustdesk
         target: /root
-    networks:
-      - rustdesk-net
     depends_on:
       - hbbr
     restart: unless-stopped
@@ -23,9 +23,11 @@ services:
   hbbr:
     # container_name: hbbr
     # network_mode: host
-    ports:
-      - 21117:21117
-      - 21119:21119
+    # ports:
+    #   - 21117:21117
+    #   - 21119:21119
+    # networks:
+    #   - rustdesk-net
     runtime: youki
     image: reg.oncolog.ir/rustdesk-server-pro
     command: hbbr
@@ -33,14 +35,12 @@ services:
       - type: volume
         source: rustdesk
         target: /root
-    networks:
-      - rustdesk-net
     restart: unless-stopped
 
 volumes:
   rustdesk:
     external: false
 
-networks:
-  rustdesk-net:
-    external: false
+# networks:
+#   rustdesk-net:
+#     external: false
