internal network => host mode

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,7 +1,7 @@
 services:
   hbbs:
     # container_name: hbbs
-    # network_mode: host
+    network_mode: host
     # ports:
     #   - 21115:21115
     #   - 21116:21116
@@ -22,7 +22,7 @@ services:
 
   hbbr:
     # container_name: hbbr
-    # network_mode: host
+    network_mode: host
     # ports:
     #   - 21117:21117
     #   - 21119:21119
